{
    "name": "InteractionInput",
    "maps": [
        {
            "name": "Interaction",
            "id": "bb06269d-b4a4-46ac-9476-88d1f7d38d0f",
            "actions": [
                {
                    "name": "PrimaryInteract",
                    "type": "Button",
                    "id": "1abd444e-4d87-40cf-8c30-67e05e61e7dd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryInteract",
                    "type": "Button",
                    "id": "c736cc44-0093-42ce-a41e-17d6c84cde95",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ef315d6-b32b-4840-b8fe-69f3e1af226b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "PrimaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8970531f-2fca-4a66-9d06-a9951d72267a",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard&Mouse",
                    "action": "SecondaryInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}